<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_bottomsheet_dialog"
    android:elevation="8dp"
    android:paddingBottom="16dp"
    android:layout_gravity="bottom">

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/main_color"
        android:id="@+id/layoutProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/mahsulot_nomi"
        android:textColorHint="#6e5114"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/main_color"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/main_color"
        android:id="@+id/layoutProductColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/mahsulot_rangi"
        android:textColorHint="#6e5114"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProductName"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputProductColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            tools:ignore="RtlHardcoded"
            android:imeOptions="actionNone"
            android:inputType="text"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/main_color"
        android:id="@+id/layoutProductCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/mahsulot_qoldig_i"
        android:textColorHint="#6e5114"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProductColor"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputProductCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:imeOptions="actionNone"
            android:inputType="number"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/main_color"
        android:id="@+id/layoutProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="Mahsulot tan narxi"
        android:textColorHint="#6e5114"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProductCount"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:imeOptions="actionNone"
            android:inputType="number"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerUnit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/layoutProductPrice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_spinner"
        app:layout_constraintVertical_bias="0.1"
        android:paddingHorizontal="4dp"
        style="@style/SpinnerTextStyle"/>

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/main_color"
        android:id="@+id/layoutAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="Alohida belgisi"
        android:textColorHint="#6e5114"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerUnit"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAnother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:imeOptions="actionNone"
            android:inputType="text"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAnother"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@null"
        android:text="@string/qabul_qilish"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginVertical="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>