<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screenLogin"
    android:background="@color/background_color">


    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/brown_boot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtApp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txtApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="#6e5114"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:text="@string/footwear_management"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginLayout"
        android:textStyle="bold"
        android:fontFamily="@font/super_wild"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bg_login"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">


        <Spinner
            android:id="@+id/spinnerPosition"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_spinner"
            app:layout_constraintVertical_bias="0.1"
            android:paddingHorizontal="4dp"
            style="@style/SpinnerTextStyle"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ism Familiya"
            app:layout_constraintTop_toBottomOf="@id/spinnerPosition"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            android:textColorHint="@color/main_color"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/main_color"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPasswordEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parol_kiriting"
                app:layout_constraintTop_toBottomOf="@id/layoutFullName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="1dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#6e5114"
                android:textColorHint="#6e5114"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/main_color">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/main_color"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefon raqam"
            app:layout_constraintTop_toBottomOf="@id/layoutPasswordEnter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            android:textColorHint="#6e5114"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/main_color"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLayout"
        app:layout_constraintBottom_toBottomOf="@id/loginLayout"
        app:backgroundTint="@null"
        android:text="@string/kirish"
        android:textColor="@color/white"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>