<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/main_color"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Bichilgan terini qo'shish"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/main_color"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Modelni tanlang"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/additional_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerModels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerModel"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_recycler_selectable"
                android:paddingVertical="2dp"
                android:paddingHorizontal="12dp"/>

            <TextView
                android:id="@+id/headerColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Rangni tanlang"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/additional_color"
                app:layout_constraintTop_toBottomOf="@id/recyclerModels"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerColor"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_recycler_selectable"
                android:paddingVertical="2dp"
                android:paddingHorizontal="12dp"/>

            <TextView
                android:id="@+id/headerSkinType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Teri turini tanlang"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/additional_color"
                app:layout_constraintTop_toBottomOf="@id/recyclerColors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSkinTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerSkinType"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_recycler_selectable"
                android:paddingVertical="2dp"
                android:paddingHorizontal="12dp"/>


            <com.google.android.material.textfield.TextInputLayout
                app:hintTextColor="@color/main_color"
                android:id="@+id/layoutInputCountPair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/necha_juft_oyoq_kiyimligini_yozing"
                android:textColorHint="#6e5114"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerSkinTypes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCountPair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/main_color"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                app:hintTextColor="@color/main_color"
                android:id="@+id/layoutInputComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/izoh"
                android:textColorHint="#6e5114"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutInputCountPair"
                android:layout_marginBottom="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputComment"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:textColor="@color/main_color"
                    tools:ignore="RtlHardcoded"
                    android:gravity="top|left"
                    android:imeOptions="actionNone"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="3"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddSkin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:layout_marginHorizontal="54dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutInputComment"
                app:layout_constraintBottom_toBottomOf="@id/layoutInputComment"
                app:backgroundTint="@null"
                android:text="@string/qabul_qilish"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
